report increment. Closes #149

--- a/docs/report/biblio.bib
+++ b/docs/report/biblio.bib
@@ -229,4 +229,36 @@
   urldate = {2020-07-31},
 }
 
+@WWW{ParaschivBruteForce,
+  author  = {Eugen Paraschiv},
+  date    = {2020-02-04},
+  title   = {Prevent Brute Force Authentication Attempts with Spring Security},
+  url     = {https://www.baeldung.com/spring-security-block-brute-force-authentication-attempts},
+  urldate = {2020-07-31},
+}
+
+@WWW{ParaschivCustomParent,
+  author  = {Eugen Paraschiv},
+  date    = {2020-01-28},
+  title   = {Spring Boot Dependency Management with a Custom Parent},
+  url     = {https://www.baeldung.com/spring-boot-dependency-management-custom-parent},
+  urldate = {2020-07-31},
+}
+
+@WWW{Manapat,
+  author  = {Michael Manapat},
+  editor  = {Stripe},
+  title   = {A primer on machine learning for fraud detection},
+  url     = {https://stripe.com/en-es/radar/guide},
+  urldate = {2020-07-31},
+}
+
+@WWW{Fowler2015,
+  author  = {Martin Fowler},
+  date    = {2015-08-26},
+  title   = {Presentation Domain Data Layering},
+  url     = {https://martinfowler.com/bliki/PresentationDomainDataLayering.html},
+  urldate = {2020-07-31},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
